corrected kafka volume claims

--- a/dev/kafka/kafkaNodePool.yaml
+++ b/dev/kafka/kafkaNodePool.yaml
@@ -12,10 +12,10 @@ spec:
     - broker
   storage:
     type: jbod
-    class: ssd
     volumes:
       - id: 0
         type: persistent-claim
+        class: ssd
         size: 10Gi
-        deleteClaim: 
+        deleteClaim: false
         kraftMetadata: shared
