--- a/dev/kafka/storageClass.yaml
+++ b/dev/kafka/storageClass.yaml
@@ -1,6 +1,20 @@
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  name: ssd
+  name: ssd-dev-2
+provisioner: kubernetes.io/no-provisioner
+volumeBindingMode: WaitForFirstConsumer
+---
+kind: StorageClass
+apiVersion: storage.k8s.io/v1
+metadata:
+  name: ssd-dev-3
+provisioner: kubernetes.io/no-provisioner
+volumeBindingMode: WaitForFirstConsumer
+---
+kind: StorageClass
+apiVersion: storage.k8s.io/v1
+metadata:
+  name: ssd-dev-4
 provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer
