--- a/dev/kafka/kafka.yaml
+++ b/dev/kafka/kafka.yaml
@@ -29,6 +29,7 @@ spec:
       type: persistent-claim
       class: ssd
       size: 10Gi
+      volumeMode: Block
       deleteClaim: false
       kraftMetadata: shared
       overrides:
