--- a/dev/kafka/storageClass.yaml
+++ b/dev/kafka/storageClass.yaml
@@ -1,20 +1,6 @@
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  name: ssd-dev-2
-provisioner: kubernetes.io/no-provisioner
-volumeBindingMode: WaitForFirstConsumer
----
-kind: StorageClass
-apiVersion: storage.k8s.io/v1
-metadata:
-  name: ssd-dev-3
-provisioner: kubernetes.io/no-provisioner
-volumeBindingMode: WaitForFirstConsumer
----
-kind: StorageClass
-apiVersion: storage.k8s.io/v1
-metadata:
-  name: ssd-dev-4
+  name: ssd
 provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer
