--- a/dev/kafka/persistentVolume.yaml
+++ b/dev/kafka/persistentVolume.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: kafka-dev-imicros-2
+  namespace: kafka
 spec:
   capacity:
     storage: 10Gi
@@ -24,6 +25,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: kafka-dev-imicros-3
+  namespace: kafka
 spec:
   capacity:
     storage: 10Gi
@@ -46,6 +48,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: kafka-dev-imicros-4
+  namespace: kafka
 spec:
   capacity:
     storage: 10Gi
