--- a/dev/kafka/persistentVolume.yaml
+++ b/dev/kafka/persistentVolume.yaml
@@ -2,14 +2,14 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: kafka-dev-imicros-2
-  namespace: kafka
 spec:
   capacity:
     storage: 10Gi
   accessModes:
   - ReadWriteOnce
+  volumeMode: Filesystem
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: ssd
+  storageClassName: local-storage
   local:
     path: /data/volumes/pv1
   nodeAffinity:
@@ -25,14 +25,14 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: kafka-dev-imicros-3
-  namespace: kafka
 spec:
   capacity:
     storage: 10Gi
   accessModes:
   - ReadWriteOnce
+  volumeMode: Filesystem
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: ssd
+  storageClassName: local-storage
   local:
     path: /data/volumes/pv1
   nodeAffinity:
@@ -48,14 +48,14 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: kafka-dev-imicros-4
-  namespace: kafka
 spec:
   capacity:
     storage: 10Gi
   accessModes:
   - ReadWriteOnce
+  volumeMode: Filesystem
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: ssd
+  storageClassName: local-storage
   local:
     path: /data/volumes/pv1
   nodeAffinity:
