--- a/dev/kafka/persistentVolume.yaml
+++ b/dev/kafka/persistentVolume.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: kafka-dev-imicros-2
+  labels:
+    strimzi.io/cluster: dev-cluster
 spec:
   capacity:
     storage: 10Gi
@@ -25,6 +27,8 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: kafka-dev-imicros-3
+  labels:
+    strimzi.io/cluster: dev-cluster
 spec:
   capacity:
     storage: 10Gi
@@ -48,6 +52,8 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: kafka-dev-imicros-4
+  labels:
+    strimzi.io/cluster: dev-cluster
 spec:
   capacity:
     storage: 10Gi
