--- a/dev/kafka/kafkaNodePool.yaml
+++ b/dev/kafka/kafkaNodePool.yaml
@@ -14,6 +14,7 @@ spec:
     type: jbod
     volumes:
       - id: 0
+        type: persistent-claim
         size: 10Gi
         class: local-storage
         deleteClaim: false
