added kafka affinity

--- a/dev/kafka/kafka.yaml
+++ b/dev/kafka/kafka.yaml
@@ -25,17 +25,19 @@ spec:
       transaction.state.log.min.isr: 2
       default.replication.factor: 3
       min.insync.replicas: 2
-    affinity:
-      nodeAffinity:
-        requiredDuringSchedulingIgnoredDuringExecution:
-          nodeSelectorTerms:
-            - matchExpressions:
-              - key: kubernetes.io/hostname
-                operator: In
-                values:
-                - dev-imicros-2
-                - dev-imicros-3
-                - dev-imicros-4
+    template:
+      pod:
+        affinity:
+          nodeAffinity:
+            requiredDuringSchedulingIgnoredDuringExecution:
+              nodeSelectorTerms:
+                - matchExpressions:
+                  - key: kubernetes.io/hostname
+                    operator: In
+                    values:
+                    - dev-imicros-2
+                    - dev-imicros-3
+                    - dev-imicros-4
   entityOperator:
     topicOperator: {}
     userOperator: {}
