--- a/dev/kafka/kafkaNodePool.yaml
+++ b/dev/kafka/kafkaNodePool.yaml
@@ -14,9 +14,9 @@ spec:
     type: jbod
     volumes:
       - id: 0
-        #type: persistent-claim
-        type: ephemeral
+        type: persistent-claim
+        #type: ephemeral
         size: 10Gi
-        #class: local-storage
+        class: local-storage
         deleteClaim: false
         kraftMetadata: shared
