--- a/dev/kafka/persistentVolume.yaml
+++ b/dev/kafka/persistentVolume.yaml
@@ -1,14 +1,18 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: kafka-dev-imicros-2
+  name: dev-cluster-dev-pool-0
   labels:
     strimzi.io/cluster: dev-cluster
 spec:
+  claimRef:
+    name: dev-cluster-dev-pool-0
+    namespace: kafka
   capacity:
     storage: 10Gi
   accessModes:
   - ReadWriteOnce
+  - ReadWriteMany
   volumeMode: Filesystem
   persistentVolumeReclaimPolicy: Retain
   storageClassName: local-storage
@@ -26,10 +30,13 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: kafka-dev-imicros-3
+  name: dev-cluster-dev-pool-1
   labels:
     strimzi.io/cluster: dev-cluster
 spec:
+  claimRef:
+    name: dev-cluster-dev-pool-1
+    namespace: kafka
   capacity:
     storage: 10Gi
   accessModes:
@@ -51,10 +58,13 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: kafka-dev-imicros-4
+  name: kdev-cluster-dev-pool-2
   labels:
     strimzi.io/cluster: dev-cluster
 spec:
+  claimRef:
+    name: dev-cluster-dev-pool-2
+    namespace: kafka
   capacity:
     storage: 10Gi
   accessModes:
