--- a/dev/cassandra/cassandraDataCenter.yaml
+++ b/dev/cassandra/cassandraDataCenter.yaml
@@ -11,9 +11,12 @@ spec:
     insecure: {}
   size: 3
   resources:
+    limits:
+      memory: 6Gi
+      cpu: "6"
     requests:
-      memory: 2Gi
-      cpu: 1000m
+      memory: 4Gi
+      cpu: "4"
   nodeAffinity:
     required:
       nodeSelectorTerms:
