cassandra adopted resources

--- a/dev/cassandra/cassandraDataCenter.yaml
+++ b/dev/cassandra/cassandraDataCenter.yaml
@@ -15,18 +15,18 @@ spec:
       memory: "6Gi"
       cpu: "4000m"
     requests:
-      memory: "4Gi"
-      cpu: "4000m"
-  #nodeAffinity:
-  #  requiredDuringSchedulingIgnoredDuringExecution:
-  #    nodeSelectorTerms:
-  #    - matchExpressions:
-  #      - key: kubernetes.io/hostname
-  #        operator: In
-  #        values:
-  #        - imicros-dev-5
-  #        - imicros-dev-6
-  #        - imicros-dev-7
+      memory: "2Gi"
+      cpu: "1000m"
+  nodeAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - imicros-dev-5
+          - imicros-dev-6
+          - imicros-dev-7
   storageConfig:
     cassandraDataVolumeClaimSpec:
       storageClassName: cassandra-local-ssd
@@ -35,9 +35,6 @@ spec:
       resources:
         requests:
           storage: 80Gi
-      selector:
-        matchLabels:
-          app: cassandra
   config:
     cassandra-yaml:
       num_tokens: 8
