--- a/dev/kafka/kafka.yaml
+++ b/dev/kafka/kafka.yaml
@@ -25,19 +25,26 @@ spec:
       transaction.state.log.min.isr: 1
       default.replication.factor: 3
       min.insync.replicas: 2
-    #template:
-    #  pod:
-    #    affinity:
-    #      nodeAffinity:
-    #        requiredDuringSchedulingIgnoredDuringExecution:
-    #          nodeSelectorTerms:
-    #            - matchExpressions:
-    #              - key: kubernetes.io/hostname
-    #                operator: In
-    #                values:
-    #                - imicros-dev-2
-    #                - imicros-dev-3
-    #                - imicros-dev-4
+    resources:
+      requests:
+        memory: 4Gi
+        cpu: 2
+      limits:
+        memory: 8Gi
+        cpu: 4
+    template:
+      pod:
+        affinity:
+          nodeAffinity:
+            requiredDuringSchedulingIgnoredDuringExecution:
+              nodeSelectorTerms:
+                - matchExpressions:
+                  - key: kubernetes.io/hostname
+                    operator: In
+                    values:
+                    - imicros-dev-8
+                    - imicros-dev-9
+                    - imicros-dev-10
   entityOperator:
     topicOperator: {}
     userOperator: {}
