--- a/dev/nats/service.yaml
+++ b/dev/nats/service.yaml
@@ -2,18 +2,22 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nats
-  namespace: nats
   labels:
     app: nats
 spec:
   selector:
     app: nats
+  clusterIP: None
   ports:
-  - name: client
-    port: 4222
-    targetPort: 4222
-    protocol: TCP
-  - name: monitor
-    port: 8222
-    targetPort: 8222
-    protocol: TCP
+    - name: client
+      port: 4222
+    - name: cluster
+      port: 6222
+    - name: monitor
+      port: 8222
+    - name: metrics
+      port: 7777
+    - name: leafnodes
+      port: 7422
+    - name: gateways
+      port: 7522
