--- a/dev/nats/statefulSet.yaml
+++ b/dev/nats/statefulSet.yaml
@@ -16,7 +16,7 @@ spec:
       labels:
         app: nats
     spec:
-      hsotname: $(statefulset name)-$(ordinal)
+      hostname: $(statefulset name)-$(ordinal)
       # same nodes like kafka
       affinity:
         nodeAffinity:
