--- a/dev/observability/cassandra/serviceMonitor.yaml
+++ b/dev/observability/cassandra/serviceMonitor.yaml
@@ -1,18 +1,20 @@
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  labels:
-    control-plane: cass-operator-controller-manager
-  name: cass-operator-metrics-monitor
+  name: cass-operator-metrics
   namespace: observability
+  labels:
+    app: cassandra
+    release: kube-prom-stack  
 spec:
   endpoints:
     - path: /metrics
-      port: https
-      scheme: https
-      bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-      tlsConfig:
-        insecureSkipVerify: true
+      port: metrics
+      #port: https
+      #scheme: https
+      #bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
+      #tlsConfig:
+      #  insecureSkipVerify: true
   selector:
     matchLabels:
-      app.kubernetes.io/instance: cass-operator
+      app.kubernetes.io/instance: cassandra-dev-cluster
