--- a/dev/nats/exporterServcie.yaml
+++ b/dev/nats/exporterServcie.yaml
@@ -1,25 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-{{ toYaml .Values.service.annotations | indent 4 }}
-  name: {{ include "prometheus-nats-exporter.fullname" . }}
-  namespace: {{ .Release.Namespace }}
+  name: nats-exporter
+  namespace: nats
   labels:
-    app.kubernetes.io/name: {{ include "prometheus-nats-exporter.name" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: {{ include "prometheus-nats-exporter.chart" . }}
-{{- if .Values.service.labels }}
-{{ toYaml .Values.service.labels | indent 4 }}
-{{- end }}
+    app.kubernetes.io/name: nats-exporter
+    app.kubernetes.io/instance: latest
 spec:
-  type: {{ .Values.service.type }}
+  type: ClusterIP
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.targetPort }}
+    - port: 80
+      targetPort: 7777
       protocol: TCP
       name: http
   selector:
-    app.kubernetes.io/name: {{ include "prometheus-nats-exporter.name" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/name: nats-exporter
+    app.kubernetes.io/instance: latest
