--- a/dev/observability/nats/serviceMonitor.yaml
+++ b/dev/observability/nats/serviceMonitor.yaml
@@ -1,40 +1,20 @@
-{{- if and .Values.serviceMonitor.enabled (.Capabilities.APIVersions.Has "monitoring.coreos.com/v1") }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  name: {{ include "prometheus-nats-exporter.fullname" . }}
-  {{- with .Values.serviceMonitor.namespace }}
-  namespace: {{ . }}
-  {{- end }}
+  name: nats-exporter
+  namespace: observability
   labels:
-    app.kubernetes.io/name: {{ include "prometheus-nats-exporter.name" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: {{ include "prometheus-nats-exporter.chart" . }}
-    {{- with .Values.serviceMonitor.additionalLabels }}
-{{ toYaml . | indent 4 }}
-    {{- end }}
+    app.kubernetes.io/name: nats-exporter
+    app.kubernetes.io/instance: latest
 spec:
   endpoints:
     - port: http
       honorLabels: true
-      {{- with .Values.serviceMonitor.interval }}
-      interval: {{ . }}
-      {{- end }}
-      {{- with .Values.serviceMonitor.scrapeTimeout }}
-      scrapeTimeout: {{ . }}
-      {{- end }}
+    - path: /metrics
   namespaceSelector:
     matchNames:
-      - {{ .Release.Namespace }}
+      - nats
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ include "prometheus-nats-exporter.name" . }}
-      app.kubernetes.io/instance: {{ .Release.Name }}
-  {{- if .Values.serviceMonitor.targetLabels }}
-  targetLabels:
-  {{- range .Values.serviceMonitor.targetLabels }}
-    - {{ . }}
-  {{- end }}
-  {{- end }}
-{{- end }}
+      app.kubernetes.io/name: nats-exporter
+      app.kubernetes.io/instance: latest
