adopted cassandra serviceMonitor

--- a/dev/observability/nats/serviceMonitor.yaml
+++ b/dev/observability/nats/serviceMonitor.yaml
@@ -6,6 +6,7 @@ metadata:
   labels:
     app.kubernetes.io/name: nats-exporter
     app.kubernetes.io/instance: latest
+    release: kube-prom-stack
 spec:
   endpoints:
     - port: http
