--- a/dev/cassandra/web/deployment.yaml
+++ b/dev/cassandra/web/deployment.yaml
@@ -1,8 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: cassandra-web
-  namespace: cass-operator
+  name: cassandra-web-deployment
+  namespace: cassandra
 spec:
   selector:
     matchLabels:
@@ -16,32 +16,26 @@ spec:
     spec:
       containers:
       - name: cassandra-web
-        image: markusgulden/cassandra-web
+        image: ipushc/cassandra-web
         env:
+        - name: HOST_PORT
+          value: 3000
         # must be adopted according the clusterIP of the cassandra service
-        - name: CASSANDRA_HOST_IPS
-          #value: 'dev-cluster-dev-datacenter-all-pods-service.cass-operator.svc.cluster.local'
-          value: '10.1.0.48,10.1.0.86,10.1.0.91'
+        - name: CASSANDRA_HOST
+          value: '10.152.183.175'
         - name: CASSANDRA_PORT
-          value: '9042'
-        - name: CASSANDRA_USER 
+          value: 9042
+        - name: CASSANDRA_USERNAME
           valueFrom:
             secretKeyRef:
-              name:  dev-cluster-superuser
-              key: username
+              name: cassandra-root
+              key: user
         - name: CASSANDRA_PASSWORD
           valueFrom:
             secretKeyRef:
-              name:  dev-cluster-superuser
+              name: cassandra-root
               key: password
-        #cmd: ["/run.sh", "--username", "$(CASSANDRA_USER)", "--password", "$(CASSANDRA_PASSWORD)"]
-        cmd: ["/run.sh"]
-        args:
-        - "--hosts $(CASSANDRA_HOST_IPS) "
-        - "--port $(CASSANDRA_PORT) "
-        - "--username $(CASSANDRA_USER) "
-        - "--password $(CASSANDRA_PASSWORD) "
         ports:
         - containerPort: 3000
-          name: web
+          name: http
           
