--- a/dev/cassandra/web/service.yaml
+++ b/dev/cassandra/web/service.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: cassandra-web
-  namespace: cass-operator
+  namespace: cassandra
   labels:
     app: cassandra-web
 spec:
   ports:
-  - name: web
+  - name: http
     port: 3000
     targetPort: 3000
     protocol: TCP
