--- a/dev/cassandra/web/service.yaml
+++ b/dev/cassandra/web/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: cassandra-web
-  namespace: cassandra
+  namespace: cass-operator
   labels:
     app: cassandra-web
 spec:
