--- a/dev/cassandra/web/service.yaml
+++ b/dev/cassandra/web/service.yaml
@@ -4,12 +4,13 @@ metadata:
   name: cassandra-web
   namespace: cass-operator
   labels:
-    app: cassandra-web
+    app.kubernetes.io/name: cassandra-web
 spec:
+  type: ClusterIP
   ports:
-  - name: http
-    port: 3000
-    targetPort: 3000
-    protocol: TCP
+    - port: 80
+      targetPort: 8080
+      protocol: TCP
+      name: http
   selector:
-    app: cassandra-web
+    app.kubernetes.io/name: cassndra-web
