--- a/dev/namespaces.yaml
+++ b/dev/namespaces.yaml
@@ -1,6 +1,13 @@
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: wireguard-system
+  labels:
+    name: wireguard-system
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: minio
   labels:
     name: minio
@@ -15,6 +22,14 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: cassandra
+  name: cass-operator
   labels:
-    name: cassandra
+    name: cass-operator
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: redis
+  labels:
+    name: redis
+
