--- a/dev/observability/redis/serviceMonitor.yaml
+++ b/dev/observability/redis/serviceMonitor.yaml
@@ -10,11 +10,10 @@ spec:
   endpoints:
     - interval: 15s
       port: exporter-port
-      honorLabels: true
       path: /metrics
   namespaceSelector:
     matchNames:
       - redis
   selector:
     matchLabels:
-      app.kubernetes.io/name: redis-exporter
+      app: redis-exporter
