--- a/dev/observability/redis/serviceMonitor.yaml
+++ b/dev/observability/redis/serviceMonitor.yaml
@@ -8,7 +8,7 @@ metadata:
     release: kube-prom-stack
 spec:
   endpoints:
-    - port: exporter-port
+    - port: http
       honorLabels: true
       path: /metrics
       interval: 15s
