--- a/dev/redis/exporterService.yaml
+++ b/dev/redis/exporterService.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: redits-exporter
+  name: redis-exporter
   namespace: redis
   labels:
     app.kubernetes.io/name: redis-exporter
