--- a/dev/namespaces.yaml
+++ b/dev/namespaces.yaml
@@ -32,4 +32,12 @@ metadata:
   name: redis
   labels:
     name: redis
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: minio
+  labels:
+    name: minio
+
 
