minio: changed headless service

--- a/dev/minio/servicePods.yaml
+++ b/dev/minio/servicePods.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: minio
 spec:
-  clusterIP: None  # It means:‘You are a HeadlessService honey : )’
+  clusterIP: None
   ports:
     - port: 9000
       name: minio
