--- a/dev/minio/servicePods.yaml
+++ b/dev/minio/servicePods.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: minio
+  name: minio-pod
   namespace: minio
   labels:
-    app: minio
+    app: minio-pod
 spec:
   clusterIP: None
   ports:
