changed to minio operator

--- a/dev/namespaces.yaml
+++ b/dev/namespaces.yaml
@@ -36,8 +36,9 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: minio
+  name: minio-operator
   labels:
-    name: minio
+    name: minio-operator
+
 
 
